# corx-lang

./: .clang-format  CMakeLists.txt  CMakePresets.json  corx.ebnf  main.c  main.co  readme.md  source.crx  source.cx  source.ox
docs/: array.html  comments.html  composition.html  conditionals.html  contract.html  errors.html  function.html  index.html  intro.html  loops.html  memory.html  metadata.html  modifiers.html  module.html  object.html  primitives.html  proposals.html  string.html  struct.html  variable-and-constant.html  variable.html
docs/assets/: script.js  style.css
notes/: ebnf.md  lexical-analysis.md
src/: analyzer.c  analyzer.h  lexer.c  lexer.h  parser.c  parser.h  symbol.c  symbol.h  utils.c  utils.h
web/: array.html  comments.html  conditionals.html  function.html  index.html  intro.html  loops.html  memory.html  metadata.html  modifiers.html  object.html  primitives.html  proposals.html  script.js  struct.html  style.css  variable-and-constant.html  variable.html
web/assets/: script.js  style.css
